--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
 	<repositories>
 		<repository>
 			<id>local-maven-repo</id>
-			<url>file:///D:/Coding-an/eclipse-workspace/TemanKondangan_Automation/repository</url>
+			<url>file:///C:\Users\Ronny_WD168\IdeaProjects\TK-automation</url>
 		</repository>
 	</repositories>
 </project>
