--- a/pom.xml
+++ b/pom.xml
@@ -103,17 +103,11 @@
 			<version>0.14.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
-			<groupId>pro.truongsinh</groupId>
-			<artifactId>appium-flutter-finder</artifactId>
-			<version>0.0.4</version>
+   			<groupId>org.postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>42.2.14</version>
 		</dependency>
 	</dependencies>
-
-	<repositories>
-		<repository>
-			<id>local-maven-repo</id>
-			<url>file:///C:/Users/Dyah_KN298/git/TK-automation/repository</url>
-		</repository>
-	</repositories>
 </project>
