add local config

--- a/configs/config.properties
+++ b/configs/config.properties
@@ -2,14 +2,14 @@
 appiumService = http://127.0.0.1:4723/wd/hub
 
 # Device capabilities
-deviceName =
+deviceName = emulator-5554
 deviceId =
 udid =
-platformName =
+platformName = Android
 platformVersion =
-automationName =
-appPackage =
-appActivity =
+automationName = UiAutomator2
+appPackage = com.mitrais.teman_kondangan
+appActivity = .MainActivity
 
 #API
 apiUrl =
