delete data config

--- a/configs/config.properties
+++ b/configs/config.properties
@@ -2,14 +2,14 @@
 appiumService = http://127.0.0.1:4723/wd/hub
 
 # Device capabilities
-deviceName = emulator-5554
+deviceName =
 deviceId =
 udid =
-platformName = Android
+platformName =
 platformVersion =
-automationName = UiAutomator2
-appPackage = com.mitrais.teman_kondangan
-appActivity = .MainActivity
+automationName =
+appPackage =
+appActivity =
 
 #API
 apiUrl =
